<resources>
    <string name="app_name">Test calculator fuctions</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parantheses">()</string>
    <string name="divided">/</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusminus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspace"> </string>
    <string name="variable">Second variable</string>
    <string name="ko">First variable</string>
<string name="multiply">X</string>


</resources>